# chatAppTakeHomeAsignment

./: CMakeLists.txt  chatScreen.qml  config.h  contactListScreen.qml  loginScreen.qml  main.cpp  main.qml  qml.qrc  signUpScreen.qml  websocketclient.cpp  websocketclient.h
controller/: chatcontroller.cpp  chatcontroller.h  logincontroller.cpp  logincontroller.h  navigator.cpp  navigator.h
model/: chatmodel.cpp  chatmodel.h  contactmodel.cpp  contactmodel.h  dataaccessobject.cpp  dataaccessobject.h  message.cpp  message.h  textmessage.cpp  textmessage.h
